Add docker in configuration