@@ -1,9 +1,10 @@
 package com.example.bankcards.service;
 
-import com.example.bankcards.dto.*;
+import com.example.bankcards.dto.card.CardDto;
 import com.example.bankcards.dto.user.CreateUserFromTokenRequest;
 import com.example.bankcards.dto.user.PagedUserResponse;
 import com.example.bankcards.dto.user.UpdateUserDto;
+import com.example.bankcards.dto.user.UserDto;
 import com.example.bankcards.entity.Card;
 import com.example.bankcards.entity.User;
 import com.example.bankcards.exception.CardAlreadyExistsException;
@@ -11,7 +12,6 @@ import com.example.bankcards.exception.UserAlreadyExistsException;
 import com.example.bankcards.exception.UserNotFoundException;
 import com.example.bankcards.repository.CardRepository;
 import com.example.bankcards.repository.UserRepository;
-import com.example.bankcards.util.CardMapper;
 import com.example.bankcards.util.UserMapper;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
@@ -24,17 +24,22 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@SuppressWarnings({"all", "SimilarLogMessages"})
 public class UserService {
     private final UserRepository userRepository;
     private final CardRepository cardRepository;
-    private final CardService cardService;
-    private final CardMapper cardMapper;
     private final UserMapper userMapper;
 
     @PersistenceContext
@@ -43,15 +48,16 @@ public class UserService {
     private static final String NOT_FOUND_SUFFIX = " not found!";
     private static final String USER_WITH_EMAIL = "User with email ";
     private static final String PREFIX_WITH_ID = "User with id ";
+    private static final String DELETED_LOG = "Deleted {} cards from database using explicit DELETE query. Card IDs: {}";
 
     /**
-     * Создает пользователя из JWT токена.
-     * Email берется из токена (для проверки уникальности),
-     * остальные данные из запроса.
-     *  * @param email email пользователя, извлеченный из JWT токена
-     *      * @param request данные пользователя (firstName, lastName, birthDate)
-     *      * @return созданный пользователь
-     *      * @throws UserAlreadyExistsException если пользователь с таким email уже существует
+     * Creates user from JWT token.
+     * Email is taken from token (for uniqueness check),
+     * other data from request.
+     *  * @param email user email extracted from JWT token
+     *      * @param request user data (firstName, lastName, birthDate)
+     *      * @return created user
+     *      * @throws UserAlreadyExistsException if user with this email already exists
      */
 
 
@@ -59,20 +65,20 @@ public class UserService {
         log.info("Creating user from token in database: email={}, firstName={}, lastName={}",
                 email, request.getFirstName(), request.getLastName());
 
-        // Проверка на существование пользователя
+        // Check if user exists
         Optional<User> existingUserOpt = userRepository.findByEmailNativeQuery(email);
 
         if (existingUserOpt.isPresent()) {
-            // Пользователь уже существует - обновляем его данные вместо выбрасывания исключения
+            // User already exists - update their data instead of throwing exception
             log.info("User with email {} already exists, updating profile data", email);
             User existingUser = existingUserOpt.get();
 
-            // Обновляем данные профиля
+            // Update profile data
             existingUser.setFirstName(request.getFirstName());
             existingUser.setLastName(request.getLastName());
             existingUser.setBirthDate(request.getBirthDate());
 
-            // Сохраняем обновленного пользователя
+            // Save updated user
             User saved = userRepository.save(existingUser);
 
             log.info("User profile updated successfully: id={}, email={}, firstName={}, lastName={}",
@@ -81,20 +87,20 @@ public class UserService {
             return userMapper.toDto(saved);
         }
 
-        // Пользователь не существует - создаем нового
-        // Создаем DTO с email из токена и данными из запроса
+        // User doesn't exist - create new one
+        // Create DTO with email from token and data from request
         UserDto userDto = new UserDto();
         userDto.setEmail(email);
         userDto.setFirstName(request.getFirstName());
         userDto.setLastName(request.getLastName());
         userDto.setBirthDate(request.getBirthDate());
-        userDto.setCards(null); // Карты можно добавить позже через отдельный endpoint
+        userDto.setCards(null); // Cards can be added later through separate endpoint
 
-        // Создаём сущность пользователя
+        // Create user entity
         User entity = userMapper.toEntity(userDto);
-        entity.setCards(new ArrayList<>()); // Пустой список карт
+        entity.setCards(new ArrayList<>()); // Empty list of cards
 
-        // Hibernate сохранит пользователя
+        // Hibernate will save the user
         User saved = userRepository.save(entity);
 
         log.info("User from token successfully saved to database: id={}, email={}, firstName={}, lastName={}",
@@ -105,7 +111,7 @@ public class UserService {
 
 
     /**
-     * Создать пользователя (только для админа)
+     * Create user (admin only)
      */
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional
@@ -118,21 +124,21 @@ public class UserService {
             dto.getCards().forEach(c -> c.setId(null));
         }
 
-        // Проверка на уникальность email
+        // Check email uniqueness
         if (userRepository.findByEmailNativeQuery(dto.getEmail()).isPresent()) {
             log.warn("User creation failed: email {} already exists", dto.getEmail());
             throw new UserAlreadyExistsException(USER_WITH_EMAIL + dto.getEmail() + " already exists");
         }
 
-        // Создаём сущность пользователя
+        // Create user entity
         User entity = userMapper.toEntity(dto);
 
-        // Привязываем карты (старые и новые)
+        // Bind cards (old and new)
         List<Card> cards = userMapper.updateCards(entity, dto.getCards());
         cards.forEach(c -> c.setUser(entity));
         entity.setCards(cards);
 
-        // Hibernate сохранит и пользователя, и все его карты (CascadeType.ALL)
+        // Hibernate will save both user and all their cards (CascadeType.ALL)
         User saved = userRepository.save(entity);
 
         log.info("User successfully saved to database: id={}, email={}, firstName={}, lastName={}",
@@ -150,17 +156,17 @@ public class UserService {
         return userMapper.toDto(user);
     }
 
-    @Transactional(readOnly = true)//длф решения проблемы ленивой инициализации
+    @Transactional(readOnly = true) // for solving lazy initialization problem
     public PagedUserResponse findAllUsers(int page, int size) {
-        // Сортировка на уровне базы данных по ID через Sort в PageRequest
+        // Database-level sorting by ID through Sort in PageRequest
         Page<User> users = userRepository.findAll(PageRequest.of(page, size, Sort.by("id").ascending()));
 
-        List<UserDto> dtos = users.stream()
+        List<UserDto> listDto = users.stream()
                 .map(userMapper::toDto)
                 .toList();
 
         return new PagedUserResponse(
-                dtos,
+                listDto,
                 users.getNumber(),
                 users.getSize(),
                 users.getTotalElements(),
@@ -172,8 +178,8 @@ public class UserService {
     public UserDto getUserByEmail(String email) {
         log.debug("Searching for user with email: {}", email);
 
-        // Используем native query для более надежного поиска
-        // Пробуем сначала native query, затем JPQL, затем named query
+        // Use native query for more reliable search
+        // Try native query first, then JPQL, then named query
         Optional<User> userOpt = userRepository.findByEmailNativeQuery(email);
         if (userOpt.isPresent()) {
             log.debug("User found using native query: {}", email);
@@ -217,26 +223,26 @@ public class UserService {
     }
 
     /**
-     * Обновляет текущего пользователя (по email из токена).
-     * Выполняет частичное обновление - обновляются только переданные поля.
-     * Для карт автоматически формируется holder из firstName + lastName пользователя.
+     * Updates the current user (by email from token).
+     * Performs partial update - only provided fields are updated.
+     * For cards, holder is automatically generated from user's firstName + lastName.
      *
-     * @param userEmail email пользователя из токена
-     * @param dto DTO с данными для обновления (все поля опциональны)
-     * @return обновленный пользователь
-     * @throws UserNotFoundException если пользователь не найден
+     * @param userEmail user email from token
+     * @param dto DTO with data for update (all fields are optional)
+     * @return updated user
+     * @throws UserNotFoundException if user is not found
      */
     @Transactional
     public UserDto updateCurrentUser(String userEmail, UpdateUserDto dto) {
         log.info("Updating current user in database: email={}", userEmail);
 
-        // Находим пользователя по email из токена
+        // Find user by email from token
         User existUser = userRepository.findByEmailNativeQuery(userEmail)
                 .orElseThrow(() -> new UserNotFoundException(USER_WITH_EMAIL + userEmail + NOT_FOUND_SUFFIX));
 
         log.debug("User found in database: id={}, email={}", existUser.getId(), existUser.getEmail());
 
-        // Обновляем пользователя (без проверки доступа, так как это свой профиль)
+        // Update user (without access check, as this is their own profile)
         UserDto updated = updateUserInternal(existUser, dto);
 
         log.info("User successfully updated in database: id={}, email={}", updated.getId(), updated.getEmail());
@@ -244,26 +250,26 @@ public class UserService {
     }
 
     /**
-     * Обновляет пользователя по ID (только для ADMIN).
-     * Админ может обновить любого пользователя без проверки доступа.
-     * Выполняет частичное обновление - обновляются только переданные поля.
-     * Для карт автоматически формируется holder из firstName + lastName пользователя.
+     * Updates user by ID (only for ADMIN).
+     * Admin can update any user without access check.
+     * Performs partial update - only provided fields are updated.
+     * For cards, holder is automatically generated from user's firstName + lastName.
      *
-     * @param id ID пользователя для обновления
-     * @param dto DTO с данными для обновления (все поля опциональны)
-     * @param adminEmail email админа (для логирования)
-     * @return обновленный пользователь
-     * @throws UserNotFoundException если пользователь не найден
+     * @param id user ID for update
+     * @param dto DTO with data for update (all fields are optional)
+     * @param adminEmail admin email (for logging)
+     * @return updated user
+     * @throws UserNotFoundException if user is not found
      */
     @Transactional
     public UserDto updateUserByAdmin(Long id, UpdateUserDto dto, String adminEmail) {
         log.info("Admin {} updating user in database: id={}", adminEmail, id);
 
-        // Получаем пользователя по ID (без проверки доступа для админа)
+        // Get user by ID (without access check for admin)
         User existUser = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + id + NOT_FOUND_SUFFIX));
 
-        // Обновляем пользователя (без проверки доступа, так как это админ)
+        // Update user (without access check, as this is admin)
         UserDto updated = updateUserInternal(existUser, dto);
 
         log.info("User successfully updated by admin in database: id={}, email={}", updated.getId(), updated.getEmail());
@@ -271,16 +277,33 @@ public class UserService {
     }
 
     /**
-     * Внутренний метод для обновления пользователя.
-     * Содержит общую логику обновления полей и карт.
+     * Internal method for updating user.
+     * Contains common logic for updating fields and cards.
      *
-     * @param existUser пользователь для обновления
-     * @param dto DTO с данными для обновления
-     * @return обновленный пользователь
+     * @param existUser user to update
+     * @param dto DTO with data for update
+     * @return updated user
      */
     private UserDto updateUserInternal(User existUser, UpdateUserDto dto) {
-
-        // Частичное обновление - обновляем только переданные поля
+        // Update basic user fields
+        updateUserFields(existUser, dto);
+        
+        // Generate holder name for cards
+        String holder = generateCardHolder(existUser);
+        
+        // Update cards if provided
+        if (dto.getCards() != null) {
+            updateUserCards(existUser, dto.getCards(), holder);
+        }
+        
+        // Save and return updated user
+        return saveAndReloadUser(existUser);
+    }
+    
+    /**
+     * Updates basic user fields from DTO.
+     */
+    private void updateUserFields(User existUser, UpdateUserDto dto) {
         if (dto.getFirstName() != null) {
             existUser.setFirstName(dto.getFirstName());
         }
@@ -290,319 +313,343 @@ public class UserService {
         if (dto.getBirthDate() != null) {
             existUser.setBirthDate(dto.getBirthDate());
         }
-        // Email не обновляется - он берется из токена и не должен изменяться через этот endpoint
-
-        // Автоматически формируем holder для карт из firstName + lastName (после обновления полей)
+    }
+    
+    /**
+     * Generates card-holder name from user's first and last name.
+     */
+    private String generateCardHolder(User existUser) {
         String holder = (existUser.getFirstName() != null ? existUser.getFirstName() : "") +
                 " " +
                 (existUser.getLastName() != null ? existUser.getLastName() : "");
         holder = holder.trim();
-
-        // Если holder пустой, используем email как fallback
+        
+        // If holder is empty, use email as fallback
         if (holder.isEmpty()) {
             holder = existUser.getEmail();
         }
-
-        if (dto.getCards() != null) {
-            // Сохраняем ID пользователя в финальную переменную для использования в лямбда-выражениях
-            final Long existUserId = existUser.getId();
-
-            // Перезагружаем пользователя из БД, чтобы получить актуальный список карт
-            // Это гарантирует, что мы работаем с актуальными данными, а не с кешем
-            entityManager.refresh(existUser);
-            log.debug("Refreshed user from database before card update. User ID: {}, Cards count: {}",
-                    existUserId, existUser.getCards() != null ? existUser.getCards().size() : 0);
-
-            Map<Long, Card> existingCardsMap = existUser.getCards().stream()
-                    .filter(c -> c.getId() != null)
-                    .collect(Collectors.toMap(Card::getId, c -> c));
-
-            // Создаем Set для отслеживания номеров карт, которые уже добавлены в этом запросе
-            java.util.Set<String> processedCardNumbers = new java.util.HashSet<>();
-            List<Card> updatedCards = new ArrayList<>();
-
-            log.debug("Processing {} cards from DTO. Existing cards in DB: {}",
-                    dto.getCards().size(), existingCardsMap.size());
-
-            // Если отправлен пустой список карт, удаляем все карты пользователя сразу
-            if (dto.getCards().isEmpty()) {
-                log.info("Received empty cards list in DTO. Deleting all existing cards for user ID: {}",
-                        existUser.getId());
-
-                // Принудительно загружаем коллекцию карт (если она lazy)
-                if (existUser.getCards() != null) {
-                    existUser.getCards().size(); // Инициализируем коллекцию
-                }
-
-                // Удаляем все карты из БД
-                if (!existUser.getCards().isEmpty()) {
-                    List<Card> allCardsToRemove = new ArrayList<>(existUser.getCards());
-                    List<Long> cardIdsToDelete = allCardsToRemove.stream()
-                            .map(Card::getId)
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
-
-                    log.info("Deleting all {} cards from database. Card IDs: {}",
-                            allCardsToRemove.size(), cardIdsToDelete);
-
-                    // Используем явный SQL DELETE через @Modifying @Query для гарантированного удаления
-                    int deletedCount = cardRepository.deleteByIds(cardIdsToDelete);
-                    cardRepository.flush();
-
-                    // Принудительно синхронизируем удаление с БД через EntityManager
-                    // Это гарантирует, что DELETE запросы будут выполнены немедленно
-                    entityManager.flush();
-
-                    // Очищаем кеш Hibernate для удаленных карт
-                    allCardsToRemove.forEach(entityManager::detach);
-
-                    log.info("Deleted {} cards from database using explicit DELETE query. Card IDs: {}",
-                            deletedCount, cardIdsToDelete);
-                }
-
-                // Очищаем коллекцию пользователя
-                existUser.getCards().clear();
-
-                // Пропускаем обработку карт, так как список пустой
-                updatedCards = new ArrayList<>();
-
-                // После удаления карт перезагружаем пользователя из БД, чтобы получить актуальное состояние
-                // Это гарантирует, что при сохранении не будет попыток загрузить удаленные карты
-                final Long userId = existUser.getId();
-                entityManager.detach(existUser); // Отсоединяем текущий объект
-                User reloadedUser = userRepository.findById(userId)
-                        .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + userId + NOT_FOUND_SUFFIX));
-                // Принудительно загружаем коллекцию карт (должна быть пустой после удаления)
-                if (reloadedUser.getCards() != null) {
-                    reloadedUser.getCards().size(); // Инициализируем коллекцию
-                }
-                log.debug("Reloaded user from database after card deletion. User ID: {}, Cards count: {}",
-                        reloadedUser.getId(), reloadedUser.getCards() != null ? reloadedUser.getCards().size() : 0);
-
-                // После удаления всех карт и перезагрузки пользователя, сразу возвращаем результат
-                // без дальнейшей обработки, так как карт больше нет
-                UserDto userDto = userMapper.toDto(reloadedUser);
-                log.info("User successfully updated after deleting all cards. User ID: {}, email: {}",
-                        userDto.getId(), userDto.getEmail());
-                return userDto;
-            } else {
-                // Обрабатываем карты из DTO
-                for (CardDto cardDto : dto.getCards()) {
-                    String cardNumber = cardDto.getNumber();
-
-                    // Проверка на дубликаты в текущем запросе
-                    if (processedCardNumbers.contains(cardNumber)) {
-                        continue; // Пропускаем дубликат в запросе
-                    }
-                    processedCardNumbers.add(cardNumber);
-
-                    if (cardDto.getId() != null && existingCardsMap.containsKey(cardDto.getId())) {
-                        // Существующая карта (передан ID) — обновляем поля
-                        Card existingCard = existingCardsMap.get(cardDto.getId());
-
-                        // Если номер карты изменился, проверяем, не занят ли новый номер
-                        if (!existingCard.getNumber().equals(cardNumber)) {
-                            // Проверяем, не принадлежит ли карта с таким номером другому пользователю
-                            cardRepository.findByNumber(cardNumber).ifPresent(otherCard -> {
-                                if (!otherCard.getUser().getId().equals(existUserId)) {
-                                    throw new CardAlreadyExistsException(
-                                            "Card with number " + cardNumber + " is already registered to another user");
-                                }
-                            });
-                        }
-
-                        existingCard.setNumber(cardNumber);
-                        // holder автоматически формируется из name + surname пользователя
-                        existingCard.setHolder(holder);
-                        existingCard.setExpirationDate(cardDto.getExpirationDate());
-                        updatedCards.add(existingCard);
-                    } else {
-                        // Карта без ID или с ID, которого нет в существующих картах
-                        // Проверяем, не существует ли уже такая карта у этого пользователя
-                        Optional<Card> existingCardForUser = cardRepository
-                                .findByNumberAndUserId(cardNumber, existUser.getId());
-
-                        if (existingCardForUser.isPresent()) {
-                            // Карта уже есть у этого пользователя - обновляем существующую (не создаем дубликат)
-                            Card existingCard = existingCardForUser.get();
-                            existingCard.setHolder(holder);
-                            existingCard.setExpirationDate(cardDto.getExpirationDate());
-                            // Номер не меняем, так как карта уже существует
-                            updatedCards.add(existingCard);
-                            continue;
-                        }
-
-                        // Проверка: не принадлежит ли карта другому пользователю
-                        cardRepository.findByNumber(cardNumber).ifPresent(otherCard -> {
-                            if (!otherCard.getUser().getId().equals(existUserId)) {
-                                throw new CardAlreadyExistsException(
-                                        "Card with number " + cardNumber + " is already registered to another user");
-                            }
-                        });
-
-                        // Создаем новую карту (если её еще нет)
-                        Card newCard = new Card();
-                        newCard.setNumber(cardNumber);
-                        // holder автоматически формируется из name + surname пользователя
-                        newCard.setHolder(holder);
-                        newCard.setExpirationDate(cardDto.getExpirationDate());
-                        newCard.setUser(existUser);
-                        updatedCards.add(newCard);
-                    }
-                }
-            }
-
-            // Явно сохраняем все обновленные карты в БД перед обновлением коллекции
-            // Это гарантирует, что изменения существующих карт будут сохранены
-            // saveAll() вернет сохраненные сущности с обновленными данными
-            List<Card> savedCards = cardRepository.saveAll(updatedCards);
-
-            // Принудительно синхронизируем изменения с БД (flush)
-            // Это гарантирует, что все изменения карт будут закоммичены до обновления пользователя
-            cardRepository.flush();
-            log.info("Flushed card updates to database. Saved {} cards. Card IDs: {}",
-                    savedCards.size(),
-                    savedCards.stream().map(Card::getId).filter(Objects::nonNull).collect(Collectors.toList()));
-
-            // Определяем карты, которые нужно удалить (те, что были у пользователя, но отсутствуют в новом списке)
-            Set<Long> savedCardIds = savedCards.stream()
+        
+        return holder;
+    }
+    
+    /**
+     * Updates user's cards based on provided card DTOs.
+     */
+    private void updateUserCards(User existUser, List<CardDto> cardDtos, String holder) {
+        final Long existUserId = existUser.getId();
+        
+        // Reload user from DB to get current list of cards
+        entityManager.refresh(existUser);
+        log.debug("Refreshed user from database before card update. User ID: {}, Cards count: {}",
+                existUserId, existUser.getCards() != null ? existUser.getCards().size() : 0);
+        
+        if (cardDtos.isEmpty()) {
+            deleteAllUserCards(existUser);
+            return;
+        }
+        
+        processCardUpdates(existUser, cardDtos, holder);
+    }
+    
+    /**
+     * Deletes all cards for a user.
+     */
+    private void deleteAllUserCards(User existUser) {
+        log.info("Received empty cards list in DTO. Deleting all existing cards for user ID: {}",
+                existUser.getId());
+        
+        if (existUser.getCards() != null && !existUser.getCards().isEmpty()) {
+            // Force load cards collection
+            int cardCount = existUser.getCards().size();
+            
+            List<Long> cardIdsToDelete = existUser.getCards().stream()
                     .map(Card::getId)
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toSet());
-
-            log.info("Saved card IDs after saveAll: {}", savedCardIds);
-
-            // Перезагружаем пользователя еще раз, чтобы получить актуальный список карт после сохранения
-            // НО: если мы только что удалили все карты (пустой список), то refresh может вернуть их обратно
-            // Поэтому делаем refresh только если список не был пустым
-            if (!dto.getCards().isEmpty()) {
-                entityManager.refresh(existUser);
-
-                // Принудительно загружаем коллекцию карт (если она lazy)
-                // Это гарантирует, что мы получим все карты из БД
-                if (existUser.getCards() != null) {
-                    existUser.getCards().size(); // Инициализируем коллекцию
-                }
-
-                // Определяем карты, которые нужно удалить (те, что были у пользователя, но отсутствуют в новом списке)
-                List<Card> cardsToRemove = existUser.getCards().stream()
-                        .filter(card -> card.getId() != null && !savedCardIds.contains(card.getId()))
-                        .collect(Collectors.toList());
-
-                log.info("Cards to remove: {} (saved card IDs: {}, existing card IDs: {})",
-                        cardsToRemove.size(),
-                        savedCardIds,
-                        existUser.getCards().stream()
-                                .map(Card::getId)
-                                .filter(Objects::nonNull)
-                                .collect(Collectors.toList()));
-
-                // Удаляем карты, которых больше нет в новом списке
-                if (!cardsToRemove.isEmpty()) {
-                    List<Long> cardIdsToDelete = cardsToRemove.stream()
-                            .map(Card::getId)
-                            .filter(Objects::nonNull)
-                            .collect(Collectors.toList());
-
-                    log.info("Deleting {} cards from database using explicit DELETE query. Card IDs: {}",
-                            cardIdsToDelete.size(), cardIdsToDelete);
-
-                    // Используем явный SQL DELETE через @Modifying @Query для гарантированного удаления
-                    int deletedCount = cardRepository.deleteByIds(cardIdsToDelete);
-                    cardRepository.flush(); // Синхронизируем удаление с БД
-
-                    // Принудительно синхронизируем удаление с БД через EntityManager
-                    entityManager.flush();
-
-                    // Очищаем кеш Hibernate для удаленных карт
-                    cardsToRemove.forEach(entityManager::detach);
-
-                    log.info("Deleted {} cards from database using explicit DELETE query. Card IDs: {}",
-                            deletedCount, cardIdsToDelete);
-
-                    // После удаления карт перезагружаем пользователя из БД, чтобы получить актуальное состояние
-                    // Это гарантирует, что коллекция existUser.getCards() не содержит удаленных карт
-                    // Сохраняем ID пользователя в финальную переменную для использования в лямбда-выражениях
-                    final Long userIdForReload = existUser.getId();
-                    entityManager.detach(existUser); // Отсоединяем текущий объект
-                    User reloadedUserAfterDeletion = userRepository.findById(userIdForReload)
-                            .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + userIdForReload + NOT_FOUND_SUFFIX));
-                    // Принудительно загружаем коллекцию карт (должна быть без удаленных карт)
-                    if (reloadedUserAfterDeletion.getCards() != null) {
-                        reloadedUserAfterDeletion.getCards().size(); // Инициализируем коллекцию
-                    }
-                    log.debug("Reloaded user from database after card deletion. User ID: {}, Cards count: {}",
-                            reloadedUserAfterDeletion.getId(), reloadedUserAfterDeletion.getCards() != null ? reloadedUserAfterDeletion.getCards().size() : 0);
-
-                    // Обновляем ссылку на пользователя после удаления карт
-                    existUser = reloadedUserAfterDeletion;
-                } else {
-                    log.debug("No cards to remove. All existing cards are in the new list.");
-                }
-            }
-
-            // Обновляем коллекцию пользователя
-            // Вместо clear() и addAll() используем прямое обновление связей
-            // Это гарантирует, что Hibernate правильно отследит изменения
-            existUser.getCards().clear();
-            existUser.getCards().addAll(savedCards);
-
-            // Устанавливаем обратную связь для всех карт
-            // Используем финальную переменную для ссылки на пользователя
-            final User finalExistUser = existUser;
-            savedCards.forEach(card -> card.setUser(finalExistUser));
+                    .toList();
+            
+            // Use explicit SQL DELETE
+            int deletedCount = cardRepository.deleteByIds(cardIdsToDelete);
+            cardRepository.flush();
+            entityManager.flush();
+            
+            // Clear Hibernate cache for deleted cards
+            existUser.getCards().forEach(entityManager::detach);
+            
+            log.info(DELETED_LOG, deletedCount, cardIdsToDelete);
         }
-
-        // Сохраняем пользователя и принудительно синхронизируем с БД
+        
+        // Clear user collection if it exists
+        if (existUser.getCards() != null) {
+            existUser.getCards().clear();
+        }
+    }
+    
+    /**
+     * Processes card updates for a user.
+     */
+    private void processCardUpdates(User existUser, List<CardDto> cardDtos, String holder) {
+        final Long existUserId = existUser.getId();
+        
+        Map<Long, Card> existingCardsMap = existUser.getCards().stream()
+                .filter(c -> c.getId() != null)
+                .collect(Collectors.toMap(Card::getId, c -> c));
+        
+        Set<String> processedCardNumbers = new HashSet<>();
+        List<Card> updatedCards = new ArrayList<>();
+        
+        log.debug("Processing {} cards from DTO. Existing cards in DB: {}",
+                cardDtos.size(), existingCardsMap.size());
+        
+        // Process each card from DTO
+        for (CardDto cardDto : cardDtos) {
+            Card processedCard = processCardDto(cardDto, existingCardsMap, processedCardNumbers, 
+                    existUserId, existUser, holder);
+            if (processedCard != null) {
+                updatedCards.add(processedCard);
+            }
+        }
+        
+        // Save updated cards and handle deletions
+        saveCardsAndHandleDeletions(existUser, updatedCards, cardDtos);
+    }
+    
+    /**
+     * Processes a single card DTO.
+     */
+    private Card processCardDto(CardDto cardDto, Map<Long, Card> existingCardsMap, 
+            Set<String> processedCardNumbers, Long existUserId, User existUser, String holder) {
+        
+        String cardNumber = cardDto.getNumber();
+        
+        // Check for duplicates in current request
+        if (processedCardNumbers.contains(cardNumber)) {
+            return null; // Skip duplicate in request
+        }
+        processedCardNumbers.add(cardNumber);
+        
+        if (cardDto.getId() != null && existingCardsMap.containsKey(cardDto.getId())) {
+            // Update existing card
+            return updateExistingCard(existingCardsMap.get(cardDto.getId()), cardDto, holder, existUserId);
+        } else {
+            // Create new card or update existing by number
+            return createOrUpdateCardByNumber(cardDto, existUser, holder, existUserId);
+        }
+    }
+    
+    /**
+     * Updates an existing card.
+     */
+    private Card updateExistingCard(Card existingCard, CardDto cardDto, String holder, Long existUserId) {
+        String cardNumber = cardDto.getNumber();
+        
+        // If card number changed, check if new number is not taken
+        if (!existingCard.getNumber().equals(cardNumber)) {
+            validateCardNumberNotTaken(cardNumber, existUserId);
+        }
+        
+        existingCard.setNumber(cardNumber);
+        existingCard.setHolder(holder);
+        existingCard.setExpirationDate(cardDto.getExpirationDate());
+        
+        return existingCard;
+    }
+    
+    /**
+     * Creates a new card or updates existing by number.
+     */
+    private Card createOrUpdateCardByNumber(CardDto cardDto, User existUser, String holder, Long existUserId) {
+        String cardNumber = cardDto.getNumber();
+        
+        // Check if such card already exists for this user
+        Optional<Card> existingCardForUser = cardRepository
+                .findByNumberAndUserId(cardNumber, existUser.getId());
+        
+        if (existingCardForUser.isPresent()) {
+            // Card already exists for this user - update existing
+            Card existingCard = existingCardForUser.get();
+            existingCard.setHolder(holder);
+            existingCard.setExpirationDate(cardDto.getExpirationDate());
+            return existingCard;
+        }
+        
+        // Validate card number is not taken by another user
+        validateCardNumberNotTaken(cardNumber, existUserId);
+        
+        // Create new card
+        Card newCard = new Card();
+        newCard.setNumber(cardNumber);
+        newCard.setHolder(holder);
+        newCard.setExpirationDate(cardDto.getExpirationDate());
+        newCard.setUser(existUser);
+        
+        return newCard;
+    }
+    
+    /**
+     * Validates that card number is not taken by another user.
+     */
+    private void validateCardNumberNotTaken(String cardNumber, Long existUserId) {
+        cardRepository.findByNumber(cardNumber).ifPresent(otherCard -> {
+            if (!otherCard.getUser().getId().equals(existUserId)) {
+                throw new CardAlreadyExistsException(
+                        "Card with number " + cardNumber + " is already registered to another user");
+            }
+        });
+    }
+    
+    /**
+     * Saves updated cards and handles card deletions.
+     */
+    private void saveCardsAndHandleDeletions(User existUser, List<Card> updatedCards, List<CardDto> cardDtos) {
+        // Save all updated cards
+        List<Card> savedCards = cardRepository.saveAll(updatedCards);
+        cardRepository.flush();
+        
+        log.info("Flushed card updates to database. Saved {} cards. Card IDs: {}",
+                savedCards.size(),
+                savedCards.stream().map(Card::getId).filter(Objects::nonNull).toList());
+        
+        // Handle card deletions if needed
+        if (!cardDtos.isEmpty()) {
+            handleCardDeletions(existUser, savedCards);
+        }
+        
+        // Update user collection
+        existUser.getCards().clear();
+        existUser.getCards().addAll(savedCards);
+        
+        // Set reverse relationship for all cards
+        savedCards.forEach(card -> card.setUser(existUser));
+    }
+    
+    /**
+     * Handles deletion of cards that are no longer in the updated list.
+     */
+    private void handleCardDeletions(User existUser, List<Card> savedCards) {
+        entityManager.refresh(existUser);
+        
+        // Force load cards collection by accessing it
+        if (existUser.getCards() != null) {
+            // Initialize lazy collection by accessing size (result intentionally ignored)
+            @SuppressWarnings("unused")
+            int collectionSize = existUser.getCards().size();
+        }
+        
+        Set<Long> savedCardIds = savedCards.stream()
+                .map(Card::getId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        
+        List<Card> cardsToRemove = existUser.getCards().stream()
+                .filter(card -> card.getId() != null && !savedCardIds.contains(card.getId()))
+                .toList();
+        
+        if (!cardsToRemove.isEmpty()) {
+            deleteRemovedCards(existUser, cardsToRemove);
+        } else {
+            log.debug("No cards to remove. All existing cards are in the new list.");
+        }
+    }
+    
+    /**
+     * Deletes cards that were removed from the user.
+     */
+    private void deleteRemovedCards(User existUser, List<Card> cardsToRemove) {
+        List<Long> cardIdsToDelete = cardsToRemove.stream()
+                .map(Card::getId)
+                .filter(Objects::nonNull)
+                .toList();
+        
+        int deletedCount = cardRepository.deleteByIds(cardIdsToDelete);
+        cardRepository.flush();
+        entityManager.flush();
+        
+        // Clear Hibernate cache for deleted cards
+        cardsToRemove.forEach(entityManager::detach);
+        
+        log.info(DELETED_LOG, deletedCount, cardIdsToDelete);
+        
+        // Reload user after deletion
+        reloadUserAfterCardDeletion(existUser);
+    }
+    
+    /**
+     * Reloads user from database after card deletion.
+     */
+    private void reloadUserAfterCardDeletion(User existUser) {
+        final Long userIdForReload = existUser.getId();
+        entityManager.detach(existUser);
+        
+        User reloadedUser = userRepository.findById(userIdForReload)
+                .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + userIdForReload + NOT_FOUND_SUFFIX));
+        
+        // Force load cards collection by accessing it
+        if (reloadedUser.getCards() != null) {
+            // Initialize lazy collection by accessing size (result intentionally ignored)
+            @SuppressWarnings("unused")
+            int collectionSize = reloadedUser.getCards().size();
+        }
+        
+        log.debug("Reloaded user from database after card deletion. User ID: {}, Cards count: {}",
+                reloadedUser.getId(), reloadedUser.getCards() != null ? reloadedUser.getCards().size() : 0);
+        
+        // Update reference
+        existUser.setCards(reloadedUser.getCards());
+        existUser.setFirstName(reloadedUser.getFirstName());
+        existUser.setLastName(reloadedUser.getLastName());
+        existUser.setBirthDate(reloadedUser.getBirthDate());
+    }
+    
+    /**
+     * Saves user and reloads from database to get final state.
+     */
+    private UserDto saveAndReloadUser(User existUser) {
+        // Save user and force synchronize with DB
         User savedUser = userRepository.save(existUser);
-        userRepository.flush(); // Гарантируем, что все изменения пользователя сохранены
+        userRepository.flush();
         log.debug("Flushed user updates to database. User ID: {}", savedUser.getId());
-
-        // Очищаем кеш Hibernate первого уровня для этого пользователя
-        // Это гарантирует, что последующие запросы будут читать данные из БД, а не из кеша
+        
+        // Clear Hibernate cache and reload user
         entityManager.detach(savedUser);
-
-        // Очищаем весь кеш первого уровня перед перезагрузкой
-        // Это гарантирует, что мы получим актуальные данные из БД, включая удаленные карты
         entityManager.clear();
-
-        // Перезагружаем пользователя из БД, чтобы получить актуальные данные (включая карты)
-        // Это гарантирует, что мы возвращаем данные, которые реально сохранены в БД
+        
         User refreshedUser = userRepository.findById(savedUser.getId())
                 .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + savedUser.getId() + NOT_FOUND_SUFFIX));
-
-        // Принудительно загружаем коллекцию карт (если она lazy)
+        
+        // Force load cards collection by accessing it
         if (refreshedUser.getCards() != null) {
-            refreshedUser.getCards().size(); // Инициализируем коллекцию
+            // Initialize lazy collection by accessing size (result intentionally ignored)
+            @SuppressWarnings("unused")
+            int collectionSize = refreshedUser.getCards().size();
         }
-
+        
         log.info("Reloaded user from database. User ID: {}, Cards count: {}",
                 refreshedUser.getId(), refreshedUser.getCards() != null ? refreshedUser.getCards().size() : 0);
-
-        // Если карты все еще есть после удаления, логируем предупреждение
+        
+        // Log warning if cards are still present after deletion
         if (refreshedUser.getCards() != null && !refreshedUser.getCards().isEmpty()) {
             log.warn("WARNING: Cards still present after deletion! User ID: {}, Cards count: {}, Card IDs: {}",
                     refreshedUser.getId(),
                     refreshedUser.getCards().size(),
-                    refreshedUser.getCards().stream().map(Card::getId).collect(Collectors.toList()));
+                    refreshedUser.getCards().stream().map(Card::getId).toList());
         }
-
+        
         return userMapper.toDto(refreshedUser);
     }
 
     /**
-     * Удалить пользователя (только для админа)
+     * Delete user (only for admin)
      */
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional
     public void deleteUser(Long id) {
-        // Получаем пользователя для извлечения email перед удалением
+        // Get user to extract email before deletion
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + id + NOT_FOUND_SUFFIX));
 
         String email = user.getEmail();
 
-        // Удаляем из user-service базы данных
+        // Delete from user-service database
         userRepository.deleteById(id);
 
         log.info("User successfully deleted from database: id={}, email={}", id, email);
@@ -611,7 +658,7 @@ public class UserService {
     // ========== ADMIN METHODS ==========
 
     /**
-     * Получить всех пользователей с пагинацией (только для админа)
+     * Get all users with pagination (only for admin)
      */
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional(readOnly = true)
@@ -637,7 +684,7 @@ public class UserService {
     }
 
     /**
-     * Обновить пользователя по ID (только для админа)
+     * Update user by ID (only for admin)
      */
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional
@@ -654,51 +701,7 @@ public class UserService {
     }
 
     /**
-     * Заблокировать пользователя (только для админа)
-     */
-    @PreAuthorize("hasRole('ADMIN')")
-    @Transactional
-    public UserDto blockUser(Long id) {
-        log.info("Admin blocking user: id={}", id);
-        
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + id + NOT_FOUND_SUFFIX));
-
-        // Блокируем все карты пользователя
-        user.getCards().forEach(Card::block);
-        
-        User saved = userRepository.save(user);
-        
-        log.info("Admin blocked user and all cards: id={}, email={}, cards blocked: {}", 
-                saved.getId(), saved.getEmail(), saved.getCards().size());
-        
-        return userMapper.toDto(saved);
-    }
-
-    /**
-     * Активировать пользователя (только для админа)
-     */
-    @PreAuthorize("hasRole('ADMIN')")
-    @Transactional
-    public UserDto activateUser(Long id) {
-        log.info("Admin activating user: id={}", id);
-        
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException(PREFIX_WITH_ID + id + NOT_FOUND_SUFFIX));
-
-        // Активируем все карты пользователя
-        user.getCards().forEach(Card::activate);
-        
-        User saved = userRepository.save(user);
-        
-        log.info("Admin activated user and all cards: id={}, email={}, cards activated: {}", 
-                saved.getId(), saved.getEmail(), saved.getCards().size());
-        
-        return userMapper.toDto(saved);
-    }
-
-    /**
-     * Поиск пользователей по email (только для админа)
+     * Search users by email (only for admin)
      */
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional(readOnly = true)
